--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -124,7 +124,7 @@ Windows 10 and Windows 11 recognise such USB configuration as COM port:
     priority
   />
   <figcaption>
-    <>Ethernet-over-USB recognised as COM port in Windows 10</>
+    <>Ethernet-over-USB recognised as COM port on Windows 10</>
   </figcaption>
 </figure>
 
