--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -88,7 +88,7 @@ Ethernet for networks with DHCP server.
 In order to access device WUI via USB, the USB driver should support some kind
 of Ethernet-over-USB bridging. Linux kernel
 [supports](https://docs.kernel.org/usb/gadget_configfs.html) such capability,
-known as "USB gadget", for more than a decade. A brief internet search revivals
+known as "USB gadget", for more than a decade. A brief internet search reveals
 that some more recent Raspberry Pi devices allow such USB configuration&nbsp;-
 including Raspberry Pi 4. Many internet forums and posts seem to suggest
 configuration that was originally
