--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -21,7 +21,7 @@ bash scripts to configure local Ethernet-over-USB on Raspberry Pi 4.
 ## Priming
 
 When using Raspberry Pi 4 as an embedded system on devices, it is convenient to
-use a web server as the device user interface. Modern browsers expose sufficient
+have a web server as the device user interface. Modern browsers expose sufficient
 functionality for web apps to perform on par with desktop and mobile
 applications. This type of Web User Interface (WUI) deployment is particularly
 attractive due to its unmatched cross-platform compatibly, no installation
