--- a/pages/index/2023-02-01.index.en.mdx
+++ b/pages/index/2023-02-01.index.en.mdx
@@ -7,8 +7,8 @@ description: My home page
 # Greetings, stranger!
 
 My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly developing
-embedded software for distributed real time systems with automatic control and
-web user interfaces.
+embedded Linux software for distributed real time systems with automatic control
+and web user interfaces.
 
 This website site is a collection of blog posts and notes, and the place where I
 can keep my thoughts organised, searchable and shared with the rest of the
