--- a/pages/index/2023-02-13.index.ru.mdx
+++ b/pages/index/2023-02-13.index.ru.mdx
@@ -7,7 +7,7 @@ description: Моя домашняя страница
 # Мои приветствия, путник!
 
 Меня зовут Виктор Рыбынок. Я инженер-программист&nbsp;– в основном, занимаюсь
-разработкой встроенного программного обеспечения для распределённых систем
+разработкой встроенного программного обеспечения Linux для распределённых систем
 реального времени с автоматическим управлением и пользовательскими интерфейсами
 на основе веб.
 
