Changing image paths in about to app static router!

--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -18,11 +18,11 @@ via email at v.rybynok@gmail.com.
   className="hidden sm:float-left sm:mt-0 sm:mb-2 sm:mr-7 sm:block
     sm:w-1/3"
 >
-  <Image src="/static/about/me-0.jpg" alt="Me" priority />
+  <Image src="static/me-0.jpg" alt="Me" priority />
 </figure>
 
 <figure className="sm:hidden">
-  <Image src="/static/about/me-0-square.jpg" alt="Me" priority />
+  <Image src="static/me-0-square.jpg" alt="Me" priority />
 </figure>
 
 One of my earliest childhood memories, from when I was perhaps 3 or 4 years old,
@@ -115,7 +115,7 @@ blood glucose monitoring project.
   className="hidden sm:float-right sm:mt-0 sm:mb-2 sm:ml-7 sm:block
     sm:w-1/3"
 >
-  <Image src="/static/about/me-1.jpg" alt="Me Panting" priority />
+  <Image src="static/me-1.jpg" alt="Me Panting" priority />
 </figure>
 
 Although I was offered a rolling contract to continue other studies and teaching
@@ -128,7 +128,7 @@ R&D&nbsp;Software Engineer to work on the user interface and control software
 for their cutting-edge analytical instruments.
 
 <figure className="sm:hidden">
-  <Image src="/static/about/me-1-square.jpg" alt="Me Panting" priority />
+  <Image src="static/me-1-square.jpg" alt="Me Panting" priority />
 </figure>
 
 Currently, I reside in Cambridge and am still employed by the same company. Over
