--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -19,11 +19,11 @@ v.rybynok@gmail.com.
   className="hidden sm:float-left sm:mt-0 sm:mb-2 sm:mr-7 sm:block
     sm:w-1/3"
 >
-  <Image src="/static/me-0.jpg" alt="Я" priority />
+  <Image src="static/me-0.jpg" alt="Я" priority />
 </figure>
 
 <figure className="sm:hidden">
-  <Image src="/static/me-0-square.jpg" alt="Я" priority />
+  <Image src="static/me-0-square.jpg" alt="Я" priority />
 </figure>
 
 Одно из самых ранних воспоминаний моего детства, когда мне, было наверное 3 или
@@ -108,7 +108,7 @@ v.rybynok@gmail.com.
   className="hidden sm:float-right sm:mt-0 sm:mb-2 sm:ml-7 sm:block
     sm:w-1/3"
 >
-  <Image src="/static/me-1.jpg" alt="Я, гребу" />
+  <Image src="static/me-1.jpg" alt="Я, гребу" />
 </figure>
 
 Хотя мне был предложен контракт для продолжения научной работы в других областях
@@ -123,7 +123,7 @@ v.rybynok@gmail.com.
 приборов, которые производит компания.
 
 <figure className="sm:hidden">
-  <Image src="/static/me-1-square.jpg" alt="Я, гребу" />
+  <Image src="static/me-1-square.jpg" alt="Я, гребу" />
 </figure>
 
 В настоящий момент я живу в Кембридже и продолжаю работать в той же компании. За
