--- a/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
+++ b/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
@@ -8,14 +8,14 @@ description:
   The story of how this site came into existence and the reasons behind its
   various technical decisions such as selected framework, components library and
   styling approach.
-ogImage: /static/blog/how-i-ended-up-here/front-end-doom.jpg
+ogImage: static/front-end-doom.jpg
 categories:
   - fun
 ---
 
 <figure>
   <Image
-    src="/static/blog/how-i-ended-up-here/front-end-doom.jpg"
+    src="static/front-end-doom.jpg"
     alt=""
     priority
   />
@@ -125,7 +125,7 @@ packages maintenance chores and infinitely deep `node_modules`.
 
 <figure>
   <Image
-    src="/static/blog/how-i-ended-up-here/heaviest-node-modules.png"
+    src="static/heaviest-node-modules.png"
     alt=""
     priority
   />
@@ -610,7 +610,7 @@ Next.js supports SCSS out-of-the-box with no further configuration.
 
 <figure>
   <Image
-    src="/static/blog/how-i-ended-up-here/css-anarchy.png"
+    src="static/css-anarchy.png"
     alt=""
     priority
   />
