--- a/pages/blog/how-i-ended-up-here/2023-02-08.index.ru.mdx
+++ b/pages/blog/how-i-ended-up-here/2023-02-08.index.ru.mdx
@@ -8,14 +8,14 @@ description:
   Высокоуровневый обзор того как этот сайт начал своё существование, а также
   пояснение причин выбора применяемых технических решений, таких как
   используемый фреймворк, библиотеки компонентов, и подходы к стилизации CSS.
-ogImage: /static/blog/how-i-ended-up-here/front-end-doom.jpg
+ogImage: static/front-end-doom.jpg
 categories:
   - fun
 ---
 
 <figure>
   <Image
-    src="/static/blog/how-i-ended-up-here/front-end-doom.jpg"
+    src="static/front-end-doom.jpg"
     alt=""
     priority
   />
@@ -124,7 +124,7 @@ packages maintenance chores and infinitely deep `node_modules`.
 
 <figure>
   <Image
-    src="/static/blog/how-i-ended-up-here/heaviest-node-modules.png"
+    src="static/heaviest-node-modules.png"
     alt=""
     priority
   />
@@ -608,7 +608,7 @@ Next.js supports SCSS out-of-the-box with no further configuration.
 
 <figure>
   <Image
-    src="/static/blog/how-i-ended-up-here/css-anarchy.png"
+    src="static/css-anarchy.png"
     alt=""
     priority
   />
