--- a/pages/blog/how-to-use-css-variables/2023-01-11.index.en.mdx
+++ b/pages/blog/how-to-use-css-variables/2023-01-11.index.en.mdx
@@ -14,7 +14,7 @@ categories:
 
 The idea is to use JavaScript object reflections capabilities to construct and
 map CSS variables from object members. The following snippet outlines the key
-functinon to perform such conversion:
+function to perform such conversion:
 
 ```ts
 const makeCssVarName = (
