--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -8,7 +8,7 @@ description:
   Local Ethernet-over-USB Raspberry Pi 4 configuration, usable for device web
   user interfaces, and compatible with Windows (RNDIS) and other major host
   operating systems (CDC-ECM).
-# ogImage: /static/blog/how-i-ended-up-here/front-end-doom.jpg
+# ogImage: static/front-end-doom.jpg
 categories: [raspberry-pi, usb, dhcp, ethernet, mdns, rndis, cdc-ecm]
 ---
 
@@ -105,7 +105,7 @@ Only" enabled:
 
 <figure>
   <Image
-    src="/static/blog/windows-is-not-my-pi/link-local-only.png"
+    src="static/link-local-only.png"
     alt=""
     priority
   />
@@ -118,7 +118,7 @@ Windows 10 and Windows 11 recognise such USB configuration as COM port:
 
 <figure>
   <Image
-    src="/static/blog/windows-is-not-my-pi/windows-device-manager-com.png"
+    src="static/windows-device-manager-com.png"
     alt=""
     className="!rounded-none"
     priority
@@ -182,7 +182,7 @@ should look like on Ubuntu:
 
 <figure>
   <Image
-    src="/static/blog/windows-is-not-my-pi/ubuntu-correct-config.png"
+    src="static/ubuntu-correct-config.png"
     alt=""
     priority
   />
@@ -195,7 +195,7 @@ and on Windows:
 
 <figure>
   <Image
-    src="/static/blog/windows-is-not-my-pi/windows-correct-config.png"
+    src="static/windows-correct-config.png"
     alt=""
     className="!rounded-none"
     priority
