--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -6,7 +6,7 @@ draft: true
 datePublished: '2023-03-05'
 # dateUpdated: '2023-02-20'
 description: Multi-language spelling in Emacs.
-# ogImage: /static/blog/how-i-ended-up-here/front-end-doom.jpg
+# ogImage: static/front-end-doom.jpg
 categories:
   - fun
 ---
