--- a/pages/index/2023-02-01.index.en.mdx
+++ b/pages/index/2023-02-01.index.en.mdx
@@ -10,6 +10,10 @@ My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly developing
 embedded Linux software for distributed real time systems with automatic control
 and web user interfaces.
 
+My current working programming languages are C++20, TypeScript, and Python. I am
+also interested in Rust, cppfront, Go, and Haskell. Throughout my career, I have
+used over two dozen general-purpose and domain-specific languages.
+
 This website site is a collection of blog posts and notes, and the place where I
 can keep my thoughts organised, searchable and shared with the rest of the
 world&nbsp;– my space in [noosphere](https://en.wikipedia.org/wiki/Noosphere).
