--- a/pages/notes/rust-analyzer/2023-07-11.index.en.mdx
+++ b/pages/notes/rust-analyzer/2023-07-11.index.en.mdx
@@ -1,6 +1,6 @@
 ---
 title: Rust and Rust Analyzer Notes
-dateUpdated: '2023-07-11'
+dateUpdated: '2023-09-12'
 description:
   Collection of Rust and rust-analyzer application hints and resource
   references. These hints were tested on Ubuntu 22.04 LTS.
@@ -40,7 +40,7 @@ Add the following lines to `~/.bashrc` (for interactive shells) and to
 `~/.profile` (for login shells):
 
 ```bash
-. "~/.cargo/env"
+. ~/.cargo/env
 ```
 
 ## Installing Rust Analyzer
