--- a/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
@@ -61,4 +61,4 @@ for DNS records updates. Most such software are propriety and closed-source.
 Tow popular open source packages of Dynamic DNS client software are:
 
  * [ddclient](https://ddclient.net/)
- * [Small and Simple DDNS Client](Small and Simple DDNS Client)
+ * [Small and Simple DDNS Client](https://troglobit.com/projects/inadyn/)
