--- a/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
@@ -5,7 +5,7 @@ description:
   Collection of Dynamic DNS hints and resource references.
 ---
 
-### Why Dynamic DNS
+## Why Dynamic DNS
 
 Dynamic DNS is useful when ISP is providing public IP address with the address
 value allocated dynamically via DHCP. In such configuration, IP address may
@@ -19,18 +19,18 @@ Dynamic DNS allows binding a stable DNS host name with a dynamic IP
 address. When dynamic IP address changes, Dynamic DNS service updates DNS record
 to the new IP address value.
 
-### Dynamic DNS names
+## Dynamic DNS abbreviations
 
 Dynamic DNS is often abbreviated as DDNS. In this note I am intentionally
 avoiding this abbreviation as it is also used for Decentralised DNS that is a
 completely different technology. Another term that is often used in
-DynDNS. Unfortunately, DynDNS is also a name of a particular Dynamic DNS service
+DynDNS. Unfortunately DynDNS is also a name of a particular Dynamic DNS service
 provider. Therefore the full _Dynamic DNS_ name is used here instead of its
 ambiguous abbreviated variants.
 
-### How it works
+## How it works
 
-Dynamic DNS service provides an API to update DNS record in real time as IP
+Dynamic DNS service provides an API to update DNS record in real time as host IP
 address changes.
 
 The client connected to dynamic IP address is responsible for updating its DNS
@@ -38,27 +38,107 @@ records using Dynamic DNS service API.
 
 The client can find its IP address from its network driver if it is connected
 directly to ISP, or by queering an external server if it is connected via router
-NAT (e.g. type "what is my IP" in Google prompt).
+NAT (e.g. typing "what is my IP" in Google prompt).
 
-### Dynamic DNS client software
+## Dynamic DNS client software
 
 There are three main options of Dynamic DNS client software:
- * Embedded router software
- * Manually installed application or service on any modern OS
- * Custom script
+* Embedded router software
+* Manually installed application or service on any modern OS
+* Custom script
 
-#### Embedded Router Software
+### Embedded Router Software
 
 The simplest approach is to use embedded router software. Dynamic DNS APIs are
 not standard and router software has limited number of the supported Dynamic DNS
 providers. Use router approach if it supports utilised Dynamic DNS provider.
 
-#### Manually Installed Application
+### Manually Installed Application
 
 Many Dynamic DNS service providers also provide a client application responsible
 for DNS records updates. Most such software are propriety and closed-source.
 
 Tow popular open source packages of Dynamic DNS client software are:
 
- * [ddclient](https://ddclient.net/)
- * [Small and Simple DDNS Client](https://troglobit.com/projects/inadyn/)
+* [ddclient](https://ddclient.net/)
+* [Small and Simple DDNS Client](https://troglobit.com/projects/inadyn/)
+
+#### ddclient configuration example
+
+```bash
+sudo apt install ddclient
+```
+
+<figure>
+  <Image
+    src="static/ddclient-config-1-provider.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Configuring ddclient (Screen 1)</>
+  </figcaption>
+</figure>
+
+<figure>
+  <Image
+    src="static/ddclient-config-2-password.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Configuring ddclient (Screen 2)</>
+  </figcaption>
+</figure>
+
+<figure>
+  <Image
+    src="static/ddclient-config-3-ip-method-desc.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Configuring ddclient (Screen 3)</>
+  </figcaption>
+</figure>
+
+<figure>
+  <Image
+    src="static/ddclient-config-4-ip-method-select.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Configuring ddclient (Screen 4)</>
+  </figcaption>
+</figure>
+
+<figure>
+  <Image
+    src="static/ddclient-config-5-host-names.png.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Configuring ddclient (Screen 5)</>
+  </figcaption>
+</figure>
+
+* https://no-ip.com/
+* https://freedns.afraid.org/
+* https://www.duckdns.org/
+* https://www.dyndns.com/
+* https://www.easydns.com/
+* https://www.dslreports.com/
+* https://www.zoneedit.com/
+
+Regarding Google Domains, as of writing this article, already existing domains
+still work. However, on September 7, 2023, Squarespace acquired all domain
+registrations and related customer accounts from Google Domains. Customers and
+domains will be transitioned over the next few months. It is still uncertain if
+Squarespace is going to offer a Dynamic DNS service.
