--- a/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
@@ -119,7 +119,7 @@ sudo apt install ddclient
 
 <figure>
   <Image
-    src="static/ddclient-config-5-host-names.png.png"
+    src="static/ddclient-config-5-host-names.png"
     alt=""
     className="!rounded-none"
     priority
@@ -142,3 +142,17 @@ still work. However, on September 7, 2023, Squarespace acquired all domain
 registrations and related customer accounts from Google Domains. Customers and
 domains will be transitioned over the next few months. It is still uncertain if
 Squarespace is going to offer a Dynamic DNS service.
+
+### Embedded Router Software
+
+<figure>
+  <Image
+    src="static/talktalk-router.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Configuring TalkTalk router</>
+  </figcaption>
+</figure>
