--- a/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/notes/dynamic-dns/2023-09-19.index.en.mdx
@@ -156,3 +156,7 @@ Squarespace is going to offer a Dynamic DNS service.
     <>Configuring TalkTalk router</>
   </figcaption>
 </figure>
+
+### Custom script
+
+https://github.com/porkbundomains/porkbun-dynamic-dns-python
