--- a/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
@@ -1,8 +1,11 @@
 ---
 title: Dynamic DNS
-dateUpdated: '2023-09-21'
+authors:
+  - Victor Rybynok
+datePublished: '2023-09-21'
 description:
   Collection of Dynamic DNS user configuration hints and resource references.
+categories: [dns, dhcp, dynamc dns]
 ---
 
 ## Why Dynamic DNS
@@ -74,10 +77,10 @@ configuration page:
 Many Dynamic DNS service providers also provide a client application responsible
 for DNS records updates. Most such software are propriety and closed-source.
 
-Two popular open source packages of Dynamic DNS client software are:
+Three popular open source packages of Dynamic DNS client software are:
 
 * [ddclient](https://github.com/ddclient/ddclient)
-* [Small and Simple DDNS Client](https://github.com/troglobit/inadyn)
+* [inadyn](https://github.com/troglobit/inadyn)
 * [dnsupdate](https://github.com/lopsided98/dnsupdate)
 
 `ddclient` is included in Debian distributive and its derivative such as
@@ -92,8 +95,8 @@ sudo apt install ddclient
 # as of writing, current ddclient version is 3.9.1
 ```
 
-When running above apt command, the installer should run the following sequence
-of configuration windows:
+When running above apt command, the installer should present the following
+sequence of configuration screens:
 
 <figure>
   <Image
@@ -155,19 +158,19 @@ of configuration windows:
   </figcaption>
 </figure>
 
-The resulting configuration files is located at `/etc/ddclient.conf`.
+The resulting configuration file is located at `/etc/ddclient.conf`.
 
 #### Dynamic DNS services supported by ddclient
 
 The following services are supported directly via configuration dialogue:
 
-* https://no-ip.com/
-* https://freedns.afraid.org/
-* https://www.duckdns.org/
-* https://www.dyndns.com/
-* https://www.easydns.com/
-* https://www.dslreports.com/
-* https://www.zoneedit.com/
+* [No-IP](https://no-ip.com/)
+* [Free DNS](https://freedns.afraid.org/)
+* [Duck DNS](https://www.duckdns.org/)
+* [DynDNS](https://www.dyndns.com/)
+* [easyDNS](https://www.easydns.com/)
+* [DSLReports](https://www.dslreports.com/)
+* [ZoneEdit](https://www.zoneedit.com/)
 
 Regarding Google Domains&nbsp;– as of writing this article, already registered
 domains are still working. However, on September 7, 2023, Squarespace acquired
@@ -183,8 +186,6 @@ details.
 
 ### Custom script
 
-The last and the most flexible option is to manually implement Dynamic DNS
-client script. The following repository is an example of a such script in Python
-for porkbun DNS service:
-
-https://github.com/porkbundomains/porkbun-dynamic-dns-python
+The last and the most flexible option is to implement Dynamic DNS client custom
+script. The following repository is an example of a such script in Python for
+porkbun DNS service: [porkbun-dynamic-dns-python](https://github.com/porkbundomains/porkbun-dynamic-dns-python)
