--- a/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
@@ -28,7 +28,7 @@ Dynamic DNS term is often abbreviated as DDNS. In the current post this
 abbreviation is intentionally avoided as it is also used for Decentralised DNS
 that is a completely different technology. Another term that is often used in
 DynDNS. Unfortunately DynDNS is also a name of a particular Dynamic DNS service
-provider. Therefore the full _Dynamic DNS_ term is used here instead of its
+provider. Therefore the full _Dynamic DNS_ name is used here instead of its
 ambiguous abbreviated variants.
 
 ## How it works
@@ -39,7 +39,7 @@ address changes.
 The client connected to dynamic IP address is responsible for updating its DNS
 records using Dynamic DNS service API.
 
-The client can find its IP address from its network driver if it is connected
+The client can find its IP address from the network driver if it is connected
 directly to ISP, or by querying an external server if it is connected via router
 NAT (e.g. typing “what is my IP” in Google prompt).
 
@@ -83,7 +83,7 @@ Three popular open source packages of Dynamic DNS client software are:
 * [inadyn](https://github.com/troglobit/inadyn)
 * [dnsupdate](https://github.com/lopsided98/dnsupdate)
 
-`ddclient` is included in Debian distributive and its derivative such as
+`ddclient` is included in Debian distributive and its derivatives such as
 Raspberry Pi OS or Ubuntu.
 
 #### ddclient installation and configuration
