--- a/pages/notes/reverse-proxy/2023-09-24.index.en.mdx
+++ b/pages/notes/reverse-proxy/2023-09-24.index.en.mdx
@@ -7,7 +7,7 @@ description:
 
 ## Reverse Proxy Options
 
-The following reverse proxy options seem to be the most popular at the moment:
+The following reverse proxy options seem to be the most popular:
 
 * [Apache](https://httpd.apache.org/)
 * [Nginx](https://www.nginx.com/) (pronounced "Engine X")
@@ -16,12 +16,12 @@ The following reverse proxy options seem to be the most popular at the moment:
 * [Envoy](https://www.envoyproxy.io/)
 
 
-Apache is the oldest and the oldest and the most customisable web server.
+Apache is the oldest and the most customisable web server.
 
-Nginx is a little younger than Apache, also very customisable and has a better
+Nginx is a bit younger than Apache, also very customisable and has a better
 performance and memory footprint than Apache.
 
-Caddy is a youngest web server and the most user-friendly.
+Caddy is younger than Apache and Nginx and the most user-friendly.
 
 All above solutions are web servers that can also be used as reverse proxies or
 load balancers.
