--- a/pages/notes/reverse-proxy/2023-09-24.index.en.mdx
+++ b/pages/notes/reverse-proxy/2023-09-24.index.en.mdx
@@ -18,10 +18,10 @@ The following reverse proxy options seem to be the most popular:
 
 Apache is the oldest and the most customisable web server.
 
-Nginx is a bit younger than Apache, also very customisable and has a better
+Nginx is a bit younger than Apache, also very customisable and has better
 performance and memory footprint than Apache.
 
-Caddy is younger than Apache and Nginx and the most user-friendly.
+Caddy is younger than both Apache and Nginx and the most user-friendly.
 
 All above solutions are web servers that can also be used as reverse proxies or
 load balancers.
