--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -31,11 +31,10 @@ https://github.com/rust-in-blockchain/awesome-blockchain-rust
 
 https://blog.mechanicalrock.io/2022/04/08/getting-started-with-protobufs-and-typescript.html
 
-### HTML5 Canvas, WebGL, games and data visualisation
+### HTML5 Canvas, WebGL, Games and Data Visualisation
 
 https://github.com/pixijs/pixijs<br />
 https://github.com/pixijs/pixi-react
-
 
 ### Node.JS
 
