--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -101,4 +101,5 @@ https://paulbricman.com/reflections
 https://ru.wikipedia.org/wiki/Полдень,_XXII_век<br />
 https://ru.wikipedia.org/wiki/Жук_в_муравейнике<br />
 https://ru.wikipedia.org/wiki/Война_с_саламандрами<br />
-https://ru.wikipedia.org/wiki/Несвятые_святые
+https://ru.wikipedia.org/wiki/Несвятые_святые<br />
+[Олег Маркеев: Неучтенный фактор](https://www.labirint.ru/books/295284/)
