--- a/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
@@ -6,7 +6,7 @@ datePublished: '2023-09-21'
 dateUpdated: '2023-02-22'
 description:
   Collection of Dynamic DNS user configuration hints and resource references.
-categories: [dns, dhcp, dynamc dns]
+categories: [dns, dhcp, dynamc-dns]
 ---
 
 ## Why Dynamic DNS
